--- a/src/app/styles/common.module.css
+++ b/src/app/styles/common.module.css
@@ -72,6 +72,11 @@
     line-height: 1.6;
 }
 
+.activeLink{
+    color: red;
+    font-weight: 600;
+}
+
 
 /*not found page styling */
 .error_page{
