--- a/src/app/styles/footer.module.css
+++ b/src/app/styles/footer.module.css
@@ -1,19 +1,10 @@
 .footer {
     background: #161617;
     width: 100%;
-    margin: 6rem auto 0 auto;
-    height: 90px;
+    height: 100px;
+    color: white;
 }
 
-.footer::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 100px;
-    height: 1px;
-    width: 100%;
-    background: #AFAFB6;
-}
 
 .footer .content {
     max-width: 140rem;
@@ -29,7 +20,7 @@
 }
 
 .content .top .logo-details {
-    color: #fff;
+    color: #ffffff;
     font-size: 30px;
 }
 
@@ -180,6 +171,8 @@
 .footer .bottom-details {
     width: 100%;
     background: #161617;
+    color: white;
+    font-weight: 600;
 }
 
 .footer .bottom-details .bottom_text {
